audio_track_setinfo_check failed のメッセージはあまり重要じゃないのに 悪目立ちするので、トレースログに下げる。 cf. PR/54177